namespace Systems_Analysis
{
    public class DiveLog
    {
    }
}