namespace Systems_Analysis
{
    public class DivingInstructor
    {
    }
}